// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collapsible > renders with as correctly 1`] = `
"<section data-state="open" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</section>"
`;

exports[`collapsible > renders with class correctly 1`] = `
"<div data-state="open" data-slot="root" class="flex flex-col gap-2 w-48">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;

exports[`collapsible > renders with content slot correctly 1`] = `
"<div data-state="open" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;">Content slot</div>
</div>"
`;

exports[`collapsible > renders with default slot correctly 1`] = `
"<div data-state="open" data-slot="root">Default slot<div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;

exports[`collapsible > renders with disabled correctly 1`] = `
"<div data-state="open" data-disabled="" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" data-disabled="" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;

exports[`collapsible > renders with open correctly 1`] = `
"<div data-state="open" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;

exports[`collapsible > renders with ui correctly 1`] = `
"<div data-state="open" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden bg-background-elevated" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;

exports[`collapsible > renders with unmountOnHide correctly 1`] = `
"<div data-state="open" data-slot="root">
  <!--v-if-->
  <div data-slot="content" class="data-[state=closed]:animate-collapsible-up data-[state=open]:animate-collapsible-down data-[state=closed]:overflow-hidden" id="akar-collapsible-content-v-0-0-0" style="--akar-collapsible-content-height: 0px; --akar-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"></div>
</div>"
`;
